--- a/code/frontend/src/pages/notes/components/styles.css
+++ b/code/frontend/src/pages/notes/components/styles.css
@@ -11,7 +11,7 @@
 
   .ql-toolbar.ql-snow .ql-picker-label {
     border: 1px solid transparent;
-    color: #7d5ffc;
+    color: #53ddf0;
   }
 
   .ql-editor {
